package ace.projetprogpro.agent;

import java.util.List;

public class EvaluationAgent {

    public String evaluatePerformance(List<Object> responses) { return ""; }
    public String generateScoreReport() { return ""; }

}
