package ace.projetprogpro.agent;

public class FeedBackModule {

    public String analyzeResponse(Object r) { return ""; }

}
