package ace.projetprogpro.api;

public class OllamaClient {

    public String askModel(String prompt) {
        // TODO : Appel HTTP ou SDK Ollama avec prompt donne
        return "Réponse simulée pour le moment";
    }

}
