package ace.projetprogpro.model;

public class Question {

    private String text;

}
