package ace.projetprogpro.model;

public class Response {

    private String answer;

    private Question question;

}
