package ace.projetprogpro.ui;

public class ConsoleUi {

    public void startInterview() { }
    public void displayQuestion(Object q) { }
    public String getUserResponse() { return ""; }
    public void displayFeedback(String feedback) { }

}
